--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "openai>=1.88.0",
+    "python-dotenv>=1.1.0",
     "requests>=2.32.4",
     "streamlit>=1.46.0",
 ]
