feat: sidebar for text
Move the textual descriptions to the sidebar instead of taking up space
at the top of the search interface.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,9 @@
 [theme]
 base = "light"
-primaryColor = "#1ea54c"
+primaryColor = "#31862c"
 backgroundColor="#f5f5f5"
 borderColor="#000903"
-linkColor="1ea54c"
+linkColor="#31862c"
 showWidgetBorder=true
 
 [client]
